# vve_cli

./: LICENSE  README.md  pyproject.toml  requirements-test.txt  setup.cfg
src/vve_cli/: __init__.py  __main__.py  dumper.py  main.py  text_to_speech.py  vve_service.py  vve_wrapper.py
