[metadata]
name = vve_cli
version = attr: vve_cli.__version__
author = buckw6eat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/buckw6eat/vve_cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vve_cli = vve_cli.main:run
